# hs-uri-handler

./: README.md  Test.hs  hs-uri-handler.cabal
exe/: Main.hs
src/System/URI/: Handler.hs
src/System/URI/Handler/: NotImplemented.hs  StandaloneRegister.hs  Types.hs  Windows.hs
