name:                hs-uri-handler
version:             0.1.0.0
synopsis:            Register URI handlers with the operating system.
-- description:
homepage:            https://github.com/Solonarv/hs-uri-handler#readme
license:             MIT
license-file:        LICENSE
author:              Nicolas Stamm
maintainer:          nstamm@gmx.de
copyright:           2017 Nicolas Stamm
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.URI.Handler
                     , System.URI.Handler.Types
                     , System.URI.Handler.NotImplemented
                     , System.URI.Handler.StandaloneRegister
  other-modules:       System.URI.Handler.Windows
  build-depends:       base ==4.*, optparse-applicative
  if os(windows)
    build-depends:     Win32
  default-language:    Haskell2010
  other-extensions:    CPP

flag test-exe
  description:         Whether to build the (trivial) test executable.
                       Off by default to avoid polluting the path.
  default:             False
  manual:              True

executable hs-uri-handler-test
  hs-source-dirs:      .
  main-is:             Test.hs
  if flag(test-exe)
    build-depends:     base, hs-uri-handler
  else
    buildable:         False
  default-language:    Haskell2010

executable register-uri-handler
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base ==4.*, hs-uri-handler
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Solonarv/hs-uri-handler
